--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -23,7 +23,9 @@
         android:layout_height="45dp"
         android:ems="10"
         android:gravity="center"
+        android:hint="putExtra()的传递数据"
         android:inputType="textPersonName"
+        android:maxLength="15"
         android:text="putExtra()的传递数据"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +39,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="center"
+        android:hint="Bundle对象的传递数据"
         android:inputType="textPersonName"
+        android:maxLength="15"
         android:text="Bundle对象的传递数据"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
