--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -77,7 +77,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="center"
+        android:hint="返回的数据"
         android:inputType="textPersonName"
+        android:maxLength="15"
         android:text="返回的数据"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
