--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -21,7 +21,7 @@
         android:id="@+id/button5"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:text="关闭"
+        android:text="@string/back"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
