--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -62,7 +62,7 @@
         android:layout_width="91dp"
         android:layout_height="37dp"
         android:layout_marginBottom="16dp"
-        android:text="关闭"
+        android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
