--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,7 +128,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
                 android:text="访问摄像头"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
 
         </LinearLayout>
 
