--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -30,7 +30,7 @@
     </androidx.viewpager.widget.ViewPager>
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/moeyuuko"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
