--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -92,7 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_result" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/moeyuuko"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
