--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -152,5 +152,21 @@
 
     </ScrollView>
 
+    <TextView
+        android:id="@+id/TextView_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="versionCode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_SDK2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="安卓版本"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
