--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -161,7 +161,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView_SDK2"
+        android:id="@+id/textView_SDK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="安卓版本"
