--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -147,6 +147,23 @@
                 android:textSize="18sp"
                 android:visibility="gone" />
 
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="--------代码类--------"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/button13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:text="冒泡排序"
+                android:textSize="18sp" />
+
         </LinearLayout>
 
 
@@ -156,7 +173,7 @@
         android:id="@+id/TextView_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="versionCode"
+        android:text="版本号"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
