--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,16 @@
                 android:text="剪刀石头布"
                 android:textSize="18sp" />
 
+
+            <Button
+            android:id="@+id/button16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="进度条"
+            android:textSize="18sp" />
+
             <Button
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
